syntax = "proto2";

package opentxs.proto;
option optimize_for = CODE_SIZE;

import public "Enums.proto";
import public "AsymmetricKey.proto";

message nymIDSource {
    optional uint32 version = 1;
    optional SourceType type = 2;
    oneof source {
        bytes raw = 3;
        AsymmetricKey key = 4;
    }
}
